<resources>
    <string name="app_name">NASA Pictures</string>

    <!-- Offline -->
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_connection_sub_text">Your Internet session was interrupted.\n Make sure that WiFi or Mobile data is turned on and you are connected to internet</string>
    <string name="error_message">Error message</string>
    <string name="error">Error</string>
    <string name="okay">Okay</string>
    <string name="detail">Detail</string>
    <string name="display">Display</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="copyright">Copyright</string>
    <string name="explanation">Explanation</string>
    <string name="bookmark">Bookmarks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>