<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <dialog
        android:id="@+id/errorDialog"
        android:name="com.shivamkumarjha.nasapictures.ui.dialog.ErrorDialog"
        android:label="@string/error_message"
        tools:layout="@layout/dialog_error" />
    <action
        android:id="@+id/action_global_errorDialog"
        app:destination="@id/errorDialog" />

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.shivamkumarjha.nasapictures.ui.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.shivamkumarjha.nasapictures.ui.detail.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="slidePosition"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>
</navigation>