<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_image_placeholder" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/detail_copyright"
            style="@style/Theme.NASA.TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?colorSurface"
            android:padding="@dimen/padding_4"
            android:textColor="?attr/colorOnSurface"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/detail_image"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/copyright"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/detail_title"
            style="@style/Theme.NASA.TextAppearance.Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@id/detail_image"
            tools:text="@string/title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/detail_date"
            style="@style/Theme.NASA.TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            app:layout_constraintBottom_toTopOf="@id/detail_explanation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_title"
            tools:text="@string/date" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/detail_explanation"
            style="@style/Theme.NASA.TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@id/detail_date"
            tools:text="@string/explanation" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
